# code-dna

./: README.md  compose.yaml  cron_job.sh
analytics-job/: README.md
analytics-job/analyticsjob/: config.py  main.py
analytics-job/analyticsjob/apis/: github.py  llm_api.py  supabase.py
analytics-job/analyticsjob/facades/: comment_identify_by_gpt.py  fetch_git_activity.py
analytics-job/analyticsjob/models/: gpt_identity_response.py
analyticsjob/: Dockerfile  pyproject.toml
analyticsjob/analyticsjob/: config.py  main.py
analyticsjob/analyticsjob/apis/: llm_api.py  supabase.py
analyticsjob/analyticsjob/facades/: comment_identify_by_gpt.py
webapp/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
webapp/assets/css/: main.css
webapp/components/: app-footer.vue  icon-bookmark.vue  icon-chart-bar.vue  icon-check.vue  icon-crown.vue  icon-star.vue  icon-value.vue  loading.vue  polygon-buttom.vue  polygon-top.vue  primary-button.vue  section-analysis.vue  section-animated-beam.vue  section-error.vue  section-feature.vue  section-skill-2.vue  section-skill-charts.vue  section-strong.vue  section-value.vue
webapp/lib/: network-graph-config.ts
webapp/pages/: confirm.vue  index.vue  login.vue  map.vue
webapp/sql/: trigger.sql
webapp/types/: dna_summary_create_status.ts  schema.ts
